--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     <section id="recommendations-for-you">
         <h2>RECOMMENDATIONS FOR YOU</h2>
         <section class="product">
-            <button id="prev-slide-rec" class="pre-btn"><img src="image/arrow.image/fe633f65fbdb702027be5beeaaf1ce92.jpg" alt="" width="40" height="40"></button>
-            <button id="next-slide-rec" class="nxt-btn"><img src="image/arrow.image/fe633f65fbdb702027be5beeaaf1ce92.jpg" alt="" width="40" height="40"></button>
+            <button id="prev-slide-rec" class="pre-btn"><img src="arrow.image/fe633f65fbdb702027be5beeaaf1ce92.jpg" alt="" width="40" height="40"></button>
+            <button id="next-slide-rec" class="nxt-btn"><img src="arrow.image/fe633f65fbdb702027be5beeaaf1ce92.jpg" alt="" width="40" height="40"></button>
             <div class="product-container">
                 <div class="product-card">
                     <div class="product-image">
